--- a/text-property.css
+++ b/text-property.css
@@ -1,5 +1,7 @@
 p{
     text-align: center;
+    line-height: 20px;
+    text-transform: uppercase;
 }
 h1{
     text-decoration: blue dotted  underline;
